<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.yuanzhihao.roboticsclub.BasicFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/extend_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/app_name"/>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/extend_toolbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/view">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/register_password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/confirm_password"
        android:layout_alignParentStart="true" />

    <AutoCompleteTextView android:id="@+id/register_email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/register_password"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="26sp"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_below="@+id/extend_toolbar"
        android:layout_alignStart="@+id/register_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Basic Information"
        android:textSize="18sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/register_email"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView android:id="@+id/spinnerText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <Spinner android:id="@+id/spinner01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_alignStart="@+id/confirm_password"
        android:layout_alignEnd="@+id/confirm_password"></Spinner>

</RelativeLayout>
